Optimised for search engines and tidied up code again

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="This is Hannah Deakin's portfolio website, featuring examples of her work as a senior copywriter, sub-editor and front-end web developer."
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
@@ -41,7 +45,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>Homepage</title>
+    <title>Hannah Deakin | Home | hannahdeakin.com</title>
   </head>
   <body>
     <nav
@@ -79,10 +83,10 @@
     <div class="hero">
       <img src="/images/max-logo-white.png" alt="" />
     </div>
-    <small class="tab">Portfolio</small>
+    <h1 class="tab">Portfolio</h1>
     <div class="container mt-5">
       <div class="row mb-5">
-        <div class="col-md-6">
+        <div class="col-lg-6">
           <div class="content-wrapper">
             <h2 class="mb-4">Project 01 |<br />Weather App</h2>
             <p class="mb-5 text-muted">
@@ -95,22 +99,23 @@
               href="https://www.shecodes.io/workshops/shecodes-plus-28010738-c351-4a11-926a-2b99dad862d0/projects/699999"
               target="_blank"
               class="btn btn-branding mb-5"
-              >Check it out</a
+              title="Click to see Hannah's weather app"
+              >Check out project</a
             >
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-lg-6">
           <div class="content-wrapper">
             <img
               src="/images/weather-img.png"
               class="project-image img-fluid"
-              alt=""
+              alt="Hannah's weather app in action"
             />
           </div>
         </div>
       </div>
       <div class="row mb-5">
-        <div class="col-md-6">
+        <div class="col-lg-6">
           <div class="content-wrapper">
             <h2 class="mb-4">Project 02 |<br />Foraging Landing Page</h2>
             <p class="mb-5 text-muted">
@@ -123,22 +128,23 @@
               href="https://www.shecodes.io/workshops/shecodes-basics-6d9ccdc4-eeda-4d48-ba36-3d0d14341104/projects/624553"
               target="_blank"
               class="btn btn-branding mb-5"
-              >Check it out</a
+              title="Click to see Hannah's foraging landing page"
+              >Check out project</a
             >
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-lg-6">
           <div class="content-wrapper">
             <img
               src="/images/foraging-img.png"
               class="project-image img-fluid"
-              alt=""
+              alt="Hannah's foraging landing page in action"
             />
           </div>
         </div>
       </div>
       <div class="row mb-5">
-        <div class="col-md-6">
+        <div class="col-lg-6">
           <div class="content-wrapper">
             <h2 class="mb-4">Project 03 |<br />Travel Story</h2>
             <p class="mb-5 text-muted">
@@ -151,16 +157,17 @@
               href="https://suitcasemag.com/articles/wilderness-whisky-meeting-northern-laos-khmu-people"
               target="_blank"
               class="btn btn-branding mb-5"
-              >Check it out</a
+              title="Click to see Hannah's travel article"
+              >Check out project</a
             >
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-lg-6">
           <div class="content-wrapper">
             <img
               src="/images/writing-img.png"
               class="project-image img-fluid"
-              alt=""
+              alt="Hannah's travel article"
             />
           </div>
         </div>
@@ -174,7 +181,10 @@
         <div class="col-md-6">
           <div class="content-wrapper mt-5">
             <div>
-              <a class="link" href="mailto:hannah.v.deakin@gmail.com"
+              <a
+                class="link"
+                href="mailto:hannah.v.deakin@gmail.com"
+                title="Click to email Hannah"
                 >hannah.v.deakin@gmail.com</a
               >
             </div>
