--- a/info.html
+++ b/info.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Find out more about Hannah Deakin's work as a senior copywriter, sub-editor and front-end web developer by checking out her experience and education."
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
@@ -36,7 +40,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>Info</title>
+    <title>Hannah Deakin | Info | hannahdeakin.com</title>
   </head>
   <body>
     <nav
@@ -58,15 +62,29 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/">Home</a>
+              <a
+                class="nav-link"
+                href="/"
+                title="Click to visit Hannah Deakin's homepage"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/info.html"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/info.html"
+                title="Click to visit Hannah Deakin's info page"
                 >Info</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact-section">Contact</a>
+              <a
+                class="nav-link"
+                href="#contact-section"
+                title="Click to contact Hannah"
+                >Contact</a
+              >
             </li>
           </ul>
         </div>
@@ -75,7 +93,7 @@
     <div class="hero">
       <img src="/images/max-logo-white.png" alt="" />
     </div>
-    <small class="tab">Information</small>
+    <h1 class="tab">Information</h1>
     <div class="container mt-5">
       <div class="row mb-5">
         <div class="col-md-6">
@@ -83,13 +101,14 @@
         </div>
         <div class="col-md-6">
           <div class="content-wrapper">
-            <h1 class="mb-4">Introduction</h1>
+            <h2 class="mb-4">Introduction</h2>
             <br />
             <p class="text-muted">
               My name is Hannah and I'm a senior copywriter, sub-editor and
-              trained creative based in London, UK. I have proven experience in
-              omnichannel content writing, strategy, and SEO copywriting, as
-              well as a strong passion for front-end web development and design.
+              front-end web developer based in London, UK. I have proven
+              experience in omnichannel content writing, strategy, and SEO
+              copywriting, as well as a strong passion for front-end web
+              development and design.
             </p>
           </div>
         </div>
@@ -120,6 +139,7 @@
                 class="link"
                 href="https://www.selfridges.com/GB/en/"
                 target="_blank"
+                title="Click to visit the Selfridges website"
                 >Selfridges</a
               >
             </h4>
@@ -131,6 +151,7 @@
                 class="link"
                 href="https://www.selfridges.com/GB/en/"
                 target="_blank"
+                title="Click to visit the Selfridges website"
                 >Selfridges</a
               >
             </h4>
@@ -142,6 +163,7 @@
                 class="link"
                 href="https://www.selfridges.com/GB/en/"
                 target="_blank"
+                title="Click to visit the Selfridges website"
                 >Selfridges</a
               >
             </h4>
@@ -149,7 +171,11 @@
             <br />
             <h4>
               Travel Writer, <br />
-              <a class="link" href="https://suitcasemag.com/" target="_blank"
+              <a
+                class="link"
+                href="https://suitcasemag.com/"
+                target="_blank"
+                title="Click to visit the SUITCASE Magazine website"
                 >SUITCASE Magazine</a
               >
             </h4>
@@ -161,6 +187,7 @@
                 class="link"
                 href="https://www.coeval-magazine.com/"
                 target="_blank"
+                title="Click to visit the Coeval Magazine website"
                 >Coeval Magazine</a
               >
             </h4>
@@ -168,7 +195,11 @@
             <br />
             <h4>
               Content Writer, <br />
-              <a class="link" href="https://everpress.com/" target="_blank"
+              <a
+                class="link"
+                href="https://everpress.com/"
+                target="_blank"
+                title="Click to visit the Everpress website"
                 >Everpress</a
               >
             </h4>
@@ -176,7 +207,11 @@
             <br />
             <h4>
               Fashion Journalism Intern, <br />
-              <a class="link" href="https://www.fleetilya.com/" target="_blank"
+              <a
+                class="link"
+                href="https://www.fleetilya.com/"
+                target="_blank"
+                title="Click to visit the Fleet Ilya website"
                 >Fleet Ilya</a
               >
             </h4>
@@ -224,6 +259,7 @@
                 class="link"
                 href="https://www.shecodes.io/certificates/8ec096d97069221bd2dde2378c0773bb"
                 target="_blank"
+                title="Click to see Hannah's certificate"
                 >SheCodes Basics</a
               >
             </h4>
@@ -234,6 +270,7 @@
                 class="link"
                 href="https://www.shecodes.io/certificates/53096f3525d01dbc81a108732903b618"
                 target="_blank"
+                title="Click to see Hannah's certificate"
                 >SheCodes Plus</a
               >
             </h4>
@@ -277,7 +314,10 @@
             <h2 class="mb-4" id="contact-section">Get in touch</h2>
             <br />
             <div>
-              <a class="link" href="mailto:hannah.v.deakin@gmail.com"
+              <a
+                class="link"
+                href="mailto:hannah.v.deakin@gmail.com"
+                title="Click to email Hannah"
                 >hannah.v.deakin@gmail.com</a
               >
             </div>
