--- a/info.html
+++ b/info.html
@@ -40,7 +40,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>Hannah Deakin | Info | hannahdeakin.com</title>
+    <title>Hannah Deakin | Info</title>
   </head>
   <body>
     <nav
