Corrected a spelling error, correctly imported Bootstrap to the Info page and changed the position of the navbar

--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
           <div class="content-wrapper">
             <h2 class="mb-4">Project 01 |<br />Weather App</h2>
             <p class="mb-5 text-muted">
-              In my latest project, I build my own weather application using
+              In my latest project, I built my own weather application using
               HTML, CSS and JS. In my project, I included a search engine, API
-              integration, the wind speed, a weather description, a weather icon
-              are mandatory, and forecast and unit conversions.
+              integration, the wind speed, a weather description, a weather
+              icon, and forecast and unit conversions.
             </p>
             <a
               href="https://www.shecodes.io/workshops/shecodes-plus-28010738-c351-4a11-926a-2b99dad862d0/projects/699999"
