--- a/info.html
+++ b/info.html
@@ -30,6 +30,11 @@
       crossorigin="anonymous"
     ></script>
     <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <script
       src="https://kit.fontawesome.com/8d17ff4027.js"
       crossorigin="anonymous"
     ></script>
@@ -44,7 +49,7 @@
   </head>
   <body>
     <nav
-      class="navbar sticky-top navbar-expand-lg navbar-light"
+      class="navbar navbar-expand-lg navbar-light"
       style="background-color: #ff9eea"
     >
       <div class="container-fluid">
