Added link to GitHub and added CSS styling

--- a/index.html
+++ b/index.html
@@ -189,6 +189,16 @@
               >
             </div>
             <div class="mb-3">+44 (0) 7742 611338</div>
+            <div>
+              <a
+                class="link-2"
+                href="https://github.com/hannah-deakin/portfolio-project"
+                target="_blank"
+                title="Click to visit Hannah's project repository"
+                >Open-source code</a
+              >
+              by Hannah Deakin
+            </div>
           </div>
         </div>
       </div>
